--- a/Lab3_20200839/src/main/resources/application.properties
+++ b/Lab3_20200839/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hospital_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://gtis-lab3-db.mysql.database.azure.com/hospital_db
+spring.datasource.username=gtislab3admin
+spring.datasource.password=KY2y2MnYxLsj5x8
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 server.port=8080
